Improve tests for methods "getJson"
- Use clearer test names
- Don't mock IOUtils